# veritext

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  PROGRESS.md  README.md  WORKFLOW.md  pyproject.toml
config/: default.yaml  local.example.yaml
config/domain_packs/: legal_contracts.yaml
docs/: PROJECT_OVERVIEW.md  annotation-conventions.md  extraction-quality-generalization-audit.md  extraction-quality-strategy.md  medium-research-kept-vs-ignored-data-points.md  medium-research-stage-debug-plan.md  output-scope-policy.md  phase_26_plus_roadmap.md  system-flow-review.md  token-cost-reduction-plan.md
docs/boards/: README.md  phase_25_workflow_and_roadmap_tracking.md  phase_26_domain_pack_and_schema_registry_foundation.md  phase_27_planner_schema_reuse_and_schema_fit_refusal.md  phase_28_legal_contracts_domain_pack_v1.md  phase_29_evaluation_harness_per_field_gates.md  phase_30_diverse_fixture_corpus_round_1.md  phase_31_adversarial_mutation_calibration_evaluation.md  phase_32_boundary_preserving_ingestion_model.md  phase_33_pdf_and_table_ingestion.md  phase_34_docx_html_email_ingestion.md  phase_35_layout_aware_chunking.md  phase_36_lens_taxonomy_and_normalization_contracts.md  phase_37_expanded_lenses_round_1.md  phase_38_dedup_canonical_values_conflict_preservation.md  phase_39_cross_document_reconciliation.md  phase_40_signed_reports_and_run_diffs.md  phase_41_architecture_rule_amendment_for_viewer_governance_and_ci.md  phase_42_static_provenance_artifact.md
docs/specs/: phase_26_domain_pack_and_schema_registry_foundation.md  phase_27_planner_schema_reuse_and_schema_fit_refusal.md  phase_35_layout_aware_chunking.md  (+14 more)
prompts/: critic.md  reconciler.md  verifier.md
scripts/: check_critic_boundary_preflight.py  debug_executor_only.py  debug_medium_research.sh  debug_planner_only.py  moonshot_offset_test.sh  prepare_failed_run_resume.py  triage_missing_and_spans.py
(+308 files in other folders)
