[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "veritext-extractor"
version = "0.1.0"
description = "Research-grade, domain-agnostic document extraction engine with auditable provenance."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.40",
  "openai>=1.40",
  "pydantic>=2",
  "aiosqlite>=0.20",
  "structlog>=24.1",
  "pyyaml>=6.0",
  "tiktoken>=0.7",
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "pdfplumber>=0.11",
]

[project.optional-dependencies]
dev = []

[project.scripts]
veritext = "extractor.cli.main:main"
veritext-eval = "extractor.evals.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/extractor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
